H5 - Se agregaron notificaciones por mail cuando el medico modifica una orden de algun paciente

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,47 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+  <style>
+    .button-aceptada {
+      background-color: #4CAF50; 
+      border: none;
+      color: white;
+      padding: 6px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 14px;
+      margin: 4px 2px;
+      cursor: auto;
+      border-radius: 8px;
+    }
+  .button-pendiente {
+    background-color: rgb(39, 136, 216); 
+    border: none;
+    color: white;
+    padding: 6px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: auto;
+    border-radius: 8px;
+  }
+  .button-rechazada {
+    background-color: rgb(197, 25, 25); 
+    border: none;
+    color: white;
+    padding: 6px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: auto;
+    border-radius: 8px;
+  }
+  </style>
 </head>
 <body>
 <app-root></app-root>
