H5 - Se corrigio el nombre del logo en el template del mail

--- a/backend/mail.html
+++ b/backend/mail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-<title>OSDE Email</title>
+<title>OSME Email</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css">
@@ -103,7 +103,8 @@ th[class="tfoot"]{display:table-footer-group !important; width:100% !important;}
 <table class="center" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td style="line-height:0;">
-<a target="_blank" style="text-decoration:none;" href="http://localhost:4200/home"><img src="https://i.ibb.co/SvBxymw/output-onlinepngtools.png" border="0"></a>
+<a target="_blank" style="text-decoration:none;" href="http://localhost:4200/home">
+    <img src="https://i.ibb.co/KDmfZz4/output-onlinepngtools-1.png" border="0"></a>
 </td>
 </tr>
 </tbody></table>
